# tanchiki

./: .gitignore  CMakeLists.txt  README.MD
include/glad/: glad.h
src/: .main.c.swp  .main.c.un~  .texture_module.c.swp  .texture_module.c.un~  ai_module.c  ai_module.h  create_window.c  create_window.h  definitions.h  glad.c  linear_algebra.c  linear_algebra.h  main.c  main.c~  main_tex.c  main_vec.c  map.txt  map2.txt  obstacle.c  obstacle.h  old_main3.c  read_map.c  read_map.h  render.c  render.h  shader_module.c  texture_module.c  texture_module.c~  texture_module.h  transformations.c  transformations.h  vertices.c  vertices.h
src/libs/: linear_algebra.c  linear_algebra.h  shader_module.h
src/old_crap/: main_vec.c  old_main.c  old_main2.c  old_main4.c
src/shaders/: projection.fs  projection.vs  shader  shader.fs  shader.vs  shader1.fs  shader1.vs  shader2.fs  shader2.vs  shader3.fs  shader_matrix.vs  shader_tex.fs
